fix gap

--- a/src/scss/_booking.scss
+++ b/src/scss/_booking.scss
@@ -1581,6 +1581,8 @@
     margin-top: 6rem;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
 
     @include breakpoint(mobile) {
         margin-top: 4rem;
@@ -1627,6 +1629,12 @@
     }
 }
 
+.booking__checkout-conditions-links {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
 .booking__checkout-conditions-rules-link {
     font-style: normal;
     font-weight: 500;
@@ -1635,8 +1643,7 @@
     font-size: 1.2rem;
     line-height: 120%;
     transition: all 0.2s;
-    margin-right: 2.5rem;
-    margin-left: auto;
+
     &:hover {
         text-decoration-color: transparent;
     }
